syntax = "proto3";
package impl.v1;

option go_package = "github.com/authzed/spicedb/pkg/proto/impl/v1";

/**
 * PostgresRevision is a compact binary encoding of a postgres snapshot as
 * described in the offial documentation here:
 * https://www.postgresql.org/docs/current/functions-info.html#FUNCTIONS-PG-SNAPSHOT-PARTS
 *
 * We use relative offsets for xmax and the xips to reduce the number of bytes
 * required for binary encoding using the protobuf varint datatype:
 * https://protobuf.dev/programming-guides/encoding/#varints
 */
message PostgresRevision {
  uint64 xmin = 1;
  int64 relative_xmax = 2;
  repeated int64 relative_xips = 3;
  // these are optional fields that are only present in strategic places that
  // need the information, but otherwise is omitted to reduce the overhead
  // of loading it from the DB and keeping it around in memory
  uint64 optional_txid = 4;
  uint64 optional_timestamp = 5;
}
